# CV_BgModellingMovingMedian

./: .gitignore  CMakeLists.txt  README.md
python_files/: bg_modelling_moving_median.py
src/: moving_median  moving_median.cpp
